# VoxelCPP

./: CMakeLists.txt  LICENSE  README.es.md  README.md
shaders/: shader.frag  shader.vert  sun.frag  sun.vert
src/: main.cpp
src/core/: Camera.cpp  Camera.hpp  Constants.hpp  EventDispatcher.cpp  EventDispatcher.hpp  Input.cpp  Input.hpp  Timer.cpp  Timer.hpp  Window.cpp  Window.hpp
src/renderer/: BlockTextureMap.hpp  ChunkMesher.cpp  ChunkMesher.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  Shader.cpp  Shader.hpp  SunRenderer.cpp  SunRenderer.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
src/scene/: ChunkMeshingSystem.cpp  ChunkMeshingSystem.hpp
src/scene/actors/: Sun.cpp  Sun.hpp
src/scene/systems/: ChunkMeshingSystem.cpp  ChunkMeshingSystem.hpp
src/world/: Block.cpp  Block.hpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  WorldGen.cpp  WorldGen.hpp
src/world/blocks/: Block.hpp
src/world/chunks/: Chunk.cpp  Chunk.hpp  ChunkManager.cpp  ChunkNeighbourhood.hpp
src/world/generation/: Flora.cpp  Flora.hpp  TerrainShaper.cpp  TerrainShaper.hpp  Tree.hpp  WorldGen.cpp  WorldGen.hpp
